--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
           <div id="about-txt" class="about-txt scroll-target">
             <p class="text-sm">
-              Hello! I'm Kidus, a passionate junior Computer Science student at MTSU. From a young age, my curiosity about the inner workings of technology has propelled me on a journey of discovery and learning. Pursuing a degree in Computer Science has enabled me to deepen my understanding of programming, data structures, algorithms, and software development. For a closer look at my journey and the skills I've developed along the way, <a href="https://pdf.ac/1Xhp93">feel free to explore my resume</a>.
+              Hello! I'm Kidus, a passionate junior Computer Science student at MTSU. From a young age, my curiosity about the inner workings of technology has propelled me on a journey of discovery and learning. Pursuing a degree in Computer Science has enabled me to deepen my understanding of programming, data structures, algorithms, and software development. For a closer look at my journey and the skills I've developed along the way, <a href="https://indigo-cindi-57.tiiny.site/">feel free to explore my resume</a>.
 
             </p>
            
